IaC/modules/aws/network/igw.tf
resource "aws_internet_gateway" "example" {
  vpc_id = aws_vpc.example.id
  tags = {
    Name = "${var.project_name}-${var.env}"
  }
}
